--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>meu portifólio</title>
 </head>
 <body>
-    <img src="img/avatar-perfil.png" alt="avatar da fernanda" srcset="">
+    <img src="img/avatar-perfil.png" alt="avatar da fernanda" class="rounded-circle" width="150" height="150" srcset="">
     <p>eu sou fernanda</p>
     <h1>eu ensino programação</h1>
     <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e Médio. Ensino sobre pensamento
@@ -15,8 +15,53 @@
         desenvolvi!</p>
     <p>minhas habilidades</p>
     <div>
-        <p>HTML</p>
-        <P>CSS</P>
-        <P>JavaScript</P>
-        <p>scratch</p>
+        <p class="badge bg-secondary">HTML</p>
+        <P class="badge bg-secondary">CSS</P>
+        <P class="badge bg-secondary">JavaScript</P>
+        <p class="badge bg-secondary">scratch</p>
     </div>
+ 
+    </header>
+<main class="conteiner">
+<h2>meus projetos</h2>
+<div class="row">
+    <div class="col-md-4">
+        <div class="card">
+            <img src="img/projeto-1.png" class="card-img-top" alt="imagem do projeto de biblioteca virtual" />
+            <div class="card-body">
+              <h5 class="card-title">minha biblioteca: uma webpage personalizada</h5>
+              <p class="card-text">
+                Este projeto é uma página web que apresenta uma lista dos meus livros
+      favoritos, incluindo informações sobre os autores, datas de publicação e
+      links para compra na Amazon. A página é estilizada com CSS para uma
+      visualização agradável e usa fontes externas do Google Fonts.
+              </p>
+              <button type="button" class="btn btn-link">veja o projeto</button>
+
+            </div>
+          </div>
+          
+    </div>
+
+    <div class="col-md-4">
+        <div class="card">
+            <img src="img/projeto-1.png" class="card-img-top" alt="imagem do projeto de biblioteca virtual" />
+            <div class="card-body">
+              <h5 class="card-title">minha biblioteca: uma webpage personalizada</h5>
+              <p class="card-text">
+                Este projeto é uma página web que apresenta uma lista dos meus livros
+      favoritos, incluindo informações sobre os autores, datas de publicação e
+      links para compra na Amazon. A página é estilizada com CSS para uma
+      visualização agradável e usa fontes externas do Google Fonts.
+              </p>
+              <button type="button" class="btn btn-link">veja o projeto</button>
+
+            </div>
+          </div>
+          
+    </div>
+</div>
+</main>
+<body>
+
+  </html>
